refactor(core): 将分页结果统一替换为ServicePage，简化结果封装
- 用ServicePage替代PageResult作为分页查询的返回类型
- 精简Service层接口，去除多余的DataResult和ListResult包装
- 调整API层返回值，统一封装为WebPageResult或ListResult
- 更新DeprecatedTableService和PinService接口及实现，改用基础List返回类型
- 在多个Controller中优化分页查询及列表返回的代码逻辑
- 新增ServicePage分页包装类，包含分页核心信息和数据列表
- 删除不必要的ActionResult包装，调整void返回方法
- 保持接口变更向后兼容，实现更优雅的分页和列表数据处理方式